--- a/discovery-frontend/src/assets/css/theme_dark/component/component.filtering.list.css
+++ b/discovery-frontend/src/assets/css/theme_dark/component/component.filtering.list.css
@@ -50,9 +50,10 @@
 
 
 .theme-dark .ddp-wrap-top-filtering .ddp-form-filtering {
-    display: inline-block;
-    position: relative;
-    vertical-align: top;
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+  margin-left: 20px;
 }
 
 .theme-dark .ddp-wrap-top-filtering .ddp-form-filtering .ddp-result-filtering {
